--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+spring.datasource.url=jdbc:postgresql://localhost:5432/Test
+spring.datasource.username=postgres
+spring.datasource.password=Glad917746.
+# Hibernate=ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+# spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
